--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -4,7 +4,7 @@
     <div>
       <h1 class="hero">Certifiez vos compétences sur la blockchain</h1>
       <p class="large-paragraph">Obtenez de nouvelles compétences avec Academint et certifiez-les sur la blockchain</p>
-      <a href="#" class="btn-main">En savoir plus</a>
+      <%= link_to "En savoir plus", about_path, class: 'btn-main'%>
     </div>
     </div>
     <div class="img-banner">
