--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -1,23 +1,37 @@
 <div class='container'>
-  <div class="course" data-controller="tabs">
+  <div class='course' data-controller="tabs">
     <div class='course-summary'>
-      <div class='course-display-content'>
-        <h2 class='chapter-name'  data-tabs-index-param="0" data-tabs-target="tab"><%= @classroom.course.name %></h2>
-        <% @classroom.course.chapters.each_with_index do |chapter, index| %>
-          <h3 data-action='click->tabs#display' data-tabs-index-param="<%= index + 1 %>" data-tabs-target="tab"><%=chapter.name  %></h3>
+      <div class='course-summary-content'>
+        <p class="selected-tab tab-font clickable" data-action='click->tabs#display' data-tabs-index-param="0" data-tabs-target="tab">Introduction</p>
+        <% index = 0 %>
+        <% @course.chapters.each do |chapter| %>
+          <p class='tab-font clickable' data-action='click->tabs#display' data-tabs-index-param="<%= index += 1 %>" data-tabs-target="tab"><%= chapter.name %></p>
+          <% lesson_number = 0 %>
           <% chapter.lessons.each do |lesson| %>
-            <div class='d-none' data-tabs-target='content'>
-              <h4><%= lesson.title %></h4>
-              <p><%= lesson.content %></p>
-              <%= link_to "Next lesson",  next_course_classroom_path(@classroom.course, @classroom, lesson: lesson.id) %>
-            </div>
+            <% lesson_number += 1 %>
+            <p class='selected-tab clickable' data-action='click->tabs#display' data-tabs-index-param="<%= index += 1 %>" data-tabs-target="tab"><%= lesson_number %> - <%= lesson.title %></p>
           <% end %>
         <% end %>
       </div>
     </div>
+    <div class='course-display'>
+      <div data-tabs-target="content">
+        <%= cl_image_tag(@course.photo.key) %>
+        <div class='course-display-content'>
+          <h1><%= @course.name %></h1>
+          <p class="large-paragraph"><%= @course.description %></p>
+        </div>
+      </div>
+      <% @course.chapters.each do |chapter| %>
+        <div class='d-none' data-tabs-target='content'>
+          <%= render 'chapter', chapter: chapter %>
+        </div>
+        <% chapter.lessons.each do |lesson| %>
+          <div class='d-none' data-tabs-target='content'>
+            <%= render 'lesson', lesson: lesson %>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
   </div>
-
-
-
-
 </div>
