--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -13,7 +13,7 @@
   li {
     list-style: none;
     margin-right: 2rem;
-    padding-bottom: 0.5rem;
+    padding: 0.5rem;
     cursor: pointer;
   }
 }
