--- a/app/views/courses/_chapter.html.erb
+++ b/app/views/courses/_chapter.html.erb
@@ -3,8 +3,7 @@
   <p class="large-paragraph"><%= chapter.description %></p>
   <h3>Ce cours comprend <%= pluralize(chapter.lessons.length, 'leçon') %>:</h3>
   <% lesson_number = 0 %>
-  <% chapter.lessons.each do |lesson| %>
-    <% lesson_number += 1 %>
-    <p class='large-paragraph'><%= lesson_number %> - <%= lesson.title %></p>
+  <% chapter.lessons.each_with_index do |lesson, i| %>
+    <p class='large-paragraph'><%= i + 1 %> - <%= lesson.title %></p>
   <% end %>
 </div>
