--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -18,10 +18,10 @@ $neutral-900: #3C3C3C;
 $neutral-1000: #1F1F1F;
 
 // Green colors
-$green-0: #CBFFEB;
-$green-100: #0ACF83;
-$green-200: #0BA96C;
-$green-300: #0A8F5C;
+$green-0: #E4F1E3;
+$green-100: #69C45F;
+$green-200: #3D9C32;
+$green-300: #17840B;
 
 // Orange colors
 $orange-0: #FFEADF;
