--- a/app/views/shared/_steps_card.html.erb
+++ b/app/views/shared/_steps_card.html.erb
@@ -1,6 +1,6 @@
       <div class="card-horizontal" style="background-color: white;">
         <div class="img-card-horizontal" >
-          <%= image_tag("hp_step_1") %>
+          <%= image_tag("hp_step_1.png") %>
         </div>
         <div class="content-card-horizontal" style= "justify-content:center">
           <div class="content-top-card-horizontal">
@@ -11,7 +11,7 @@
       </div>
       <div class="card-horizontal" style="background-color: white;">
         <div class="img-card-horizontal">
-           <%= image_tag("hp_step_2") %>
+           <%= image_tag("hp_step_2.png") %>
         </div>
         <div class="content-card-horizontal" style= "justify-content:center">
           <div class="content-top-card-horizontal">
@@ -23,7 +23,7 @@
       </div>
       <div class="card-horizontal" style="background-color: white;">
         <div class="img-card-horizontal">
-          <%= image_tag("hp_step_3") %>
+          <%= image_tag("hp_step_3.png") %>
         </div>
         <div class="content-card-horizontal" style= "justify-content:center">
           <div class="content-top-card-horizontal">
@@ -35,7 +35,7 @@
       </div>
       <div class="card-horizontal" style="background-color: white;">
         <div class="img-card-horizontal">
-          <%= image_tag("hp_step_4") %>
+          <%= image_tag("hp_step_4.png") %>
         </div>
         <div class="content-card-horizontal" style= "justify-content:center">
           <div class="content-top-card-horizontal">
