--- a/app/assets/stylesheets/components/_badges.scss
+++ b/app/assets/stylesheets/components/_badges.scss
@@ -2,23 +2,21 @@
   padding: 5px 20px;
   font-weight: 600;
   font-size: 14px;
-  border-radius: $border-radius-search;
+  border-radius: $border-radius-main;
+  border: none;
 }
 
 .badge-beginner {
   color: $green-300;
-  border: 1px solid $green-300;
   background-color: $green-0;
 }
 
 .badge-intermediate {
   color: $orange-200;
-  border: 1px solid $orange-200;
   background-color: $orange-0;
 }
 
 .badge-expert {
   color: $red-200;
-  border: 1px solid $red-200;
   background-color: $red-0;
 }
