--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -124,3 +124,21 @@
     background-color: $primary-violet-hover;
   }
 }
+
+.dashboard-card-finished {
+  background-color: $neutral-100-violet;
+  border-radius: $border-radius-main;
+  box-shadow: $elevation-100;
+  padding: 1rem;
+  transition: 0.2 ease-in-out;
+  .green {
+    color: $green-300;
+  }
+  h3 {
+    color: $primary-violet;
+    margin: 0;
+  }
+  &:hover {
+    background-color: $green-0;
+  }
+}
