Added first draft of a quizz based on seed

--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -41,3 +41,5 @@
     <%= form.submit "Validate your answers" %>
   <% end %>
 </div>
+<%# TODO: Creatde a method to compare the values  %>
+<%# TODO: Put a condition on the sbt generation based on the result of the quizz  %>
