add-call2action-path

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,6 +24,9 @@
       </div>
       <h2>Comment obtenir des certificats NFT ?</h2>
       <%= render "shared/steps_card"%>
+      <div class="about-btn">
+        <%= link_to "Devenez expert Web3", courses_path, class: 'btn-main'%>
+      </div>
     </div>
   </div>
 </div>
