--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -14,18 +14,24 @@
 
 .block-text-about {
   width: 70%;
-  line-height: 1.5rem;
+  line-height: 2rem;
 }
 
 .block-img-about {
   width: 50%;
   img {
     width: 100%;
-    height: 250px;
+    height: 310px;
     object-fit: cover;
   }
 }
 
 .academint-block {
   display: flex;
+}
+
+.about-btn{
+  display: flex;
+  justify-items: center;
+  justify-content: center;
 }
