--- a/app/views/classrooms/_lesson.html.erb
+++ b/app/views/classrooms/_lesson.html.erb
@@ -1,5 +1,7 @@
 <div class='course-display-content'>
   <h1><%= lesson.title %></h1>
   <p class="large-paragraph"><%= lesson.content %></p>
-  <%= link_to "Next lesson",  next_course_classroom_path(classroom.course, classroom, lesson: lesson.id) %>
+  <div data-action='click->tabs#nextLesson' data-tabs-index-param="<%= index + 1 %>">
+    <%= link_to "Next lesson",  next_course_classroom_path(classroom.course, classroom, lesson: lesson.id), data: { tabs_target: "link" }%>
+  </div>
 </div>
