--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -5,7 +5,7 @@
         <p class="selected-tab tab-font clickable" data-action='click->tabs#display' data-tabs-index-param="0" data-tabs-target="tab">Introduction</p>
         <% index = 0 %>
         <% @course.chapters.each do |chapter| %>
-          <p class='tab-font'><%= chapter.name %></p>
+          <h5 class='large-paragraph'><strong><%= chapter.name %></strong></h5>
           <% chapter.lessons.each_with_index do |lesson, i| %>
             <p class='tab-font clickable' data-action='click->tabs#display' data-tabs-index-param="<%= index += 1 %>" data-tabs-target="tab"><%= i + 1 %> - <%= lesson.title %></p>
           <% end %>
