--- a/app/assets/stylesheets/pages/_show_course.scss
+++ b/app/assets/stylesheets/pages/_show_course.scss
@@ -1,9 +1,6 @@
 .course {
   display: flex;
   margin-top: 20px;
-  h1 {
-    margin: 0;
-  }
 }
 
 .course-summary {
@@ -16,6 +13,9 @@
       &:hover {
       color: $primary-violet-hover;
     }
+  }
+  h5 {
+    margin: 0.5rem 0;
   }
 }
 
@@ -30,6 +30,7 @@
 }
 
 .course-display {
+  min-height: 90vh;
   width: 70%;
   img {
     width: 100%;
@@ -61,4 +62,10 @@
 
 .tab-font {
   font-size: 16px;
+}
+
+.btn-lesson-next {
+  height: 100px;
+  display: flex;
+  align-items: center;
 }
