--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -30,12 +30,12 @@
 
 <%# TODO: Create a route to get the value from the answers  %>
 <div class="container">
-  <%= form_with url: "", method: :get do |form| %>
+  <%= form_with url: "/courses/#{@course.id}/classrooms/#{@classroom.id}/quizz" do |form| %>
     <% Answer.all.each do |answer| %>
     <h3><%= answer.question.content %></h3>
-    <% answer.content.split(',').each do |word| %>
-      <%= form.check_box :"#{word}" %>
-      <%= form.label :"#{word}", word %>
+    <% answer.content.split(',').each_with_index do |word, index| %>
+      <%= form.check_box :"user_answers[#{answer.id}][#{index}]"%>
+      <%= form.label :"user_answers[#{index}]", word %>
       <% end %>
     <% end %>
     <%= form.submit "Validate your answers" %>
