--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,18 +19,18 @@
               </div>
           <div class="dropdown-menu d-none" data-dropdown-target="dropdownMenu" >
             <ul>
-              <li data-action="click->dropdown#show"><%= link_to 'Mon profil', dashboard_path %></li>
-              <li data-wallet-target="login" data-action="click->dropdown#show">
+              <li data-action="click->dropdown#hide"><%= link_to 'Mon profil', dashboard_path %></li>
+              <li data-wallet-target="login" data-action="click->dropdown#hide">
                 <button data-action="click->wallet#connectWallet">
                   Connecter portefeuille
                 </button>
               </li>
-              <li class="d-none" data-wallet-target="logout" data-action="click->dropdown#show">
+              <li class="d-none" data-wallet-target="logout" data-action="click->dropdown#hide">
                 <button class="disconnect-wallet"data-action="click->wallet#disconnectWallet">
                   Déconnecter portefeuille
                 </button>
               </li>
-              <li data-action="click->dropdown#show"><%= link_to 'Déconnexion', destroy_user_session_path, data: {turbo_method: :delete}, class: 'red' %></li>
+              <li data-action="click->dropdown#hide"><%= link_to 'Déconnexion', destroy_user_session_path, data: {turbo_method: :delete}, class: 'red' %></li>
             </ul>
           </div>
         </div>
