--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,8 +5,9 @@
 }
 
 .display-cards {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  gap: 1.5rem;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .block-home {
