--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -30,8 +30,10 @@
   <div class="container container-footer-course">
     <% if !current_user %>
       <%= link_to 'Commencer', new_user_session_path, class: 'btn-main' %>
-    <% elsif @user_has_course %>
-      <%= link_to 'Continuer', course_classroom_path(@course, @classroom), class: 'btn-main' %>
+    <% elsif @user_has_course && !@classroom.finished? %>
+      <%= link_to 'Continuer', course_classroom_lecture_path(@course, @classroom, @classroom.ongoing_lecture), class: 'btn-main' %>
+    <% elsif @user_has_course && @classroom.finished? %>
+      <%= link_to 'Revoir le cours', course_classroom_lecture_path(@course, @classroom, @classroom.lectures.first), class: 'btn-main' %>
     <% else %>
       <%= button_to 'Commencer', course_classrooms_path(@course), class: 'btn-main' %>
     <% end %>
