added a mint NFT page and added a connect button on it

--- a/app/assets/stylesheets/pages/_show_course.scss
+++ b/app/assets/stylesheets/pages/_show_course.scss
@@ -54,6 +54,9 @@
   padding: 1.5rem 0;
   border-top: 1px solid $neutral-200;
   background-color: $neutral-100-violet;
+  p {
+    margin: 0;
+  }
 }
 
 .container-footer-course {
