--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,29 +1,13 @@
-<div class='container'>
+<div class='container' data-controller="collapse">
   <div class="wrapper-no-footer">
-    <div class='course' data-controller="tabs">
-      <div class='course-summary'>
-        <div class='course-summary-content'>
-          <p class="selected-tab tab-font clickable" data-action='click->tabs#display' data-tabs-index-param="0" data-tabs-target="tab">Introduction</p>
-          <% @course.chapters.each_with_index do |chapter, index| %>
-            <p class='tab-font clickable' data-action='click->tabs#display' data-tabs-index-param="<%= index + 1 %>" data-tabs-target="tab"><%= chapter.name %></p>
-          <% end %>
+    <% @course.chapters.each do |chapter| %>
+      <h4 data-action="click->collapse#open" data-><%= chapter.name %></h5>
+      <% chapter.lessons.each do |lesson| %>
+        <div class="lesson-tabs">
+          <p class="disabled-link"><%= lesson.media %> || <%= lesson.title%></p>
         </div>
-      </div>
-      <div class='course-display'>
-        <div data-tabs-target="content">
-          <%= cl_image_tag(@course.photo.key) %>
-          <div class='course-display-content'>
-            <h1><%= @course.name %></h1>
-            <p class="large-paragraph"><%= @course.description %></p>
-          </div>
-        </div>
-        <% @course.chapters.each do |chapter| %>
-          <div class='d-none' data-tabs-target='content'>
-            <%= render 'chapter', chapter: chapter %>
-          </div>
-        <% end %>
-      </div>
-    </div>
+      <% end %>
+    <% end %>
   </div>
 </div>
 <div class="course-footer">
