--- a/app/views/lectures/show.html.erb
+++ b/app/views/lectures/show.html.erb
@@ -1,5 +1,5 @@
 <div class='container'>
-  <div class='course' data-controller="tabs">
+  <div class='course'>
     <div class='course-summary'>
       <div class='course-summary-content'>
         <% @course.chapters.each do |chapter| %>
@@ -40,13 +40,11 @@
   <div class="container container-footer-course">
     <% if @last_course %>
       <%= link_to next_course_classroom_path(@classroom.course, @classroom),
-          data: { tabs_target: "link" },
           class: 'next-lesson' do %>
             <button class="btn-main">Obtiens ton NFT</button>
       <% end %>
     <% else %>
       <%= link_to next_course_classroom_path(@classroom.course, @classroom),
-          data: { tabs_target: "link" },
           class: 'next-lesson' do %>
             <p class="large-paragraph">Leçon suivante <i class="fa-solid fa-arrow-right"></i></p>
       <% end %>
