--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -23,7 +23,7 @@
           <p class="large-paragraph" style="margin-bottom:6%">
              Les utilisateurs peuvent aussi bien créer du contenu éducatif pour le partager auprès de notre communauté, que suivre des cours en ligne. Les formations Academint bénéficient d’une certification sous forme de NFT pour valoriser votre expertise sur le marché de l’emploi.
           </p>
-          <%= link_to "M'inscrire", new_user_registration_path, class: 'btn-main'%>
+          <%= link_to "Démarrer les cours", new_user_registration_path, class: 'btn-main'%>
         </div>
       </div>
     </div>
