--- a/app/views/shared/_steps_card.html.erb
+++ b/app/views/shared/_steps_card.html.erb
@@ -1,45 +1,45 @@
-      <div class="card-horizontal" style="background-color: white;">
+      <div class="card-step" style="background-color: white;">
         <div class="img-card-horizontal" >
           <%= image_tag("hp_step_1.png") %>
         </div>
         <div class="content-card-horizontal" style= "justify-content:center">
           <div class="content-top-card-horizontal">
-          <h3>STEP 1: Sélectionnez votre cours en ligne</h3>
+          <h3>Étape 1: Sélectionnez votre cours en ligne</h3>
           <p class="large-paragraph">Accédez à un catalogue de cours de haute qualité dispensés par des experts de l'écosystème WEB3, qui comprend des cours sur NFT, les cryptomonnaies ou encore la blockchain !</p>
           </div>
         </div>
       </div>
-      <div class="card-horizontal" style="background-color: white;">
+      <div class="card-step" style="background-color: white;">
         <div class="img-card-horizontal">
            <%= image_tag("hp_step_2.png") %>
         </div>
         <div class="content-card-horizontal" style= "justify-content:center">
           <div class="content-top-card-horizontal">
-          <h3>STEP 2: Commencez votre apprentissage </h3>
+          <h3>Étape 2: Commencez votre apprentissage </h3>
           <p class="large-paragraph">Inscrivez-vous gratuitement sur votre cours en ligne et suivez-le à votre rythme.
              La durée des cours nécessite quelques heures de votre temps et peut être suivi sur quelques jours si vous le souhaitez.</p>
           </div>
         </div>
       </div>
-      <div class="card-horizontal" style="background-color: white;">
+      <div class="card-step" style="background-color: white;">
         <div class="img-card-horizontal">
           <%= image_tag("hp_step_3.png") %>
         </div>
         <div class="content-card-horizontal" style= "justify-content:center">
           <div class="content-top-card-horizontal">
-          <h3>STEP 3: Validez vos connaissances</h3>
+          <h3>Étape 3: Validez vos connaissances</h3>
           <p class="large-paragraph">Il est temps de vous tester !
              À la fin de chaque cours complet, nos professeurs vous invitent à répondre à un test en ligne de 40mn pour évaluer votre niveau. Cette étape est obligatoire pour obtenir votre certification.</p>
           </div>
         </div>
       </div>
-      <div class="card-horizontal" style="background-color: white;">
+      <div class="card-step" style="background-color: white;">
         <div class="img-card-horizontal">
           <%= image_tag("hp_step_4.png") %>
         </div>
         <div class="content-card-horizontal" style= "justify-content:center">
           <div class="content-top-card-horizontal">
-          <h3>STEP 4: Obtenez votre certificat NFT</h3>
+          <h3>Étape 4: Obtenez votre certificat NFT</h3>
           <p class="large-paragraph">Vous avez obtenu un score d’au moins 90 % de réussite à l'évaluation de votre cours ? Félicitations !
              Vous pouvez à présent générer votre certificat NFT en cliquant sur le bouton de validation !</p>
           </div>
