--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -76,6 +76,16 @@
   text-decoration: none;
   box-shadow: $elevation-100;
 }
+.card-step {
+  display: flex;
+  height: 160px;
+  width: 100%;
+  margin: 1.5rem 0;
+  background-color: $neutral-100-violet;
+  text-decoration: none;
+  box-shadow: $elevation-100;
+  border: solid rgb(221, 218, 218)
+}
 
 .img-card-horizontal {
   width: 25%;
