--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,9 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+@import "actiontext.css";
+
+
 
 body {
   font-family: $body-font;
