--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,7 +1,7 @@
 <div class='container' data-controller="collapse">
   <div class='course'>
     <div class="wrapper-no-footer course-display">
-      <%= cl_image_tag(@course.photo.key) %>
+      <%# <%= cl_image_tag(@course.photo.key) %> %>
       <div class='course-display-content'>
         <h1><%= @course.name %></h1>
         <p class="large-paragraph"><%= @course.description %></p>
