--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,2 +1,6 @@
-<h1>Courses#new</h1>
-<p>Find me in app/views/courses/new.html.erb</p>
+<%= simple_form_for @course do |f| %>
+  <%= f.input :name %>
+  <%= f.input :description %>
+  <%= f.input :level, collection: [ "Débutant", "Intermédiaire", "Expert"] %>
+  <%= f.button :submit %>
+<% end %>
