--- a/app/views/lessons/new.html.erb
+++ b/app/views/lessons/new.html.erb
@@ -1,6 +1,9 @@
-<%= simple_form_for [@course, @chapter, @lesson] do |f| %>
-  <%= f.input :title %>
-  <%= f.input :media, collection: [ "Podcast", "Vidéo", "Text"]  %>
-  <%= f.rich_text_area :content %>
-  <%= f.button :submit %>
-<% end %>
+<div class="container">
+  <%= simple_form_for [@course, @chapter, @lesson] do |f| %>
+    <%= f.input :title %>
+    <%= f.input :media, as: :select, collection: [ "podcast", "video", "texte"]  %>
+    <%= f.input :content %>
+    <%= f.rich_text_area :enriched_content %>
+    <%= f.button :submit %>
+  <% end %>
+</div>
