--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar">
   <div class="container container-navbar">
     <%= link_to root_path do %>
-      <%= image_tag "logo_academint.svg", alt: "logo Academint", id: 'logo' %>
+      <%= image_tag "Academint.png", alt: "logo Academint", id: 'logo' %>
     <% end %>
     <div>
       <%= render "shared/search_bar" %>
