Fixed classroom controller

--- a/app/views/lectures/show.html.erb
+++ b/app/views/lectures/show.html.erb
@@ -49,5 +49,6 @@
             <p class="large-paragraph">Leçon suivante <i class="fa-solid fa-arrow-right"></i></p>
       <% end %>
     <% end %>
+<%= link_to "Take your quizz now!", quizz_course_classroom_path %>
   </div>
 </div>
